--- a/RealSuite/Properties/Resources.resx
+++ b/RealSuite/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="FrontLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\FrontLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="FrontLogoHighlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FrontLogoHighlight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FrontLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FrontLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="FrontLogoClick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FrontLogoClick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FrontFullLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FrontFullLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
