--- a/RealSuite/Properties/Resources.resx
+++ b/RealSuite/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="FrontFullLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FrontFullLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="For Sale Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\For Sale Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
