--- a/RealSuite/Properties/Resources.resx
+++ b/RealSuite/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Refresh Properties Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Refresh Properties Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="FrontLogoHighlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FrontLogoHighlight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -129,5 +132,8 @@
   </data>
   <data name="FrontFullLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FrontFullLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ClearPropertyFiltersIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ClearPropertyFiltersIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
